2005-04-01  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade:
	* src/totem-preferences.c: (totem_setup_preferences):

	Remove the proprietary plugins button, nobody uses it, and GStreamer
	doesn't support it (Closes: #170892)

2005-04-01  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (totem_sublang_equal_lists),
	(totem_languages_update), (totem_subtitles_update),
	(totem_sublang_update), (totem_sublang_exit):
	* src/totem-menu.h:
	* src/totem-private.h:
	* src/totem.c: (totem_action_exit):

	Only add/remove the menu items when the languages or audio tracks
	change, should avoid GtkMenu crappiness when the menu is opened
	and we switch to a different DVD chapter

2005-04-01  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: fix linking for the video properties nautilus
	extension

2005-04-01  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* totem.spec.in:
	  Fix RPM build.

2005-04-01  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* Makefile.am:
	* data/Makefile.am:
	* help/C/Makefile.am:
	* help/omf.make:
	* omf.make:
	* src/Makefile.am:
	  Fix distcheck.

2005-04-01  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (totem_lang_table_init): and set the correct
	encoding to get the translations

2005-04-01  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* src/bacon-video-widget-properties.c:
	(bacon_video_widget_properties_new): load the glade file using
	our convenience functions
	* src/totem-menu.c: (totem_lang_get_full): load the translations
	from the correct domain

2005-04-01  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* data/totem.schemas.in:
	* src/backend/bacon-video-widget-gst.c: (cb_gconf),
	(bacon_video_widget_new):
	  Add some GConf settings for network cache size.

2005-04-01  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_get_languages),
	(bacon_video_widget_get_subtitles): and remove the spaces properly,
	duh!
